
<resources>
    <string name="app_name">H3ko</string>

    <!--MainActivty-->
    <string name="err_title">Invalid</string>
    <string name="email_msg">Please enter a valid email address</string>
    <string name="password_msg">Please enter a valid password address</string>

    <!--Tag-->
    <string name="photo_tab">Photo</string>
    <string name="info_tab">Name/Address</string>
    <string name="card_tab">Card Number</string>
    <string name="personal_data">Personal Data</string>
    <string name="medicinal_data">Medicinal Data</string>

    <!--Search Patient-->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="street_name">Street Name</string>
    <string name="house_no">House No</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>

    <!--Search card number-->
    <string name="card_number">Card Number</string>
    <string name="search_patient">Search Patient</string>

    <!--Helper-->
    <string name="ok">Ok</string>
    <string name="error_finding_patient_title">Incorrect information</string>
    <string name="error_finding_patient_msg">Sorry no patient found</string>
    <string name="internet_err_title">No Internet</string>
    <string name="internet_err_msg">You are not connected to internet, please turn on wifi or mobile data</string>

    <!--Personal information-->
    <string name="sex">Sex</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="dob">Date of Birth</string>

    <!--Medicinal data-->
    <string name="vorerkrankungen">Pre-existing conditions</string>
    <string name="aktuelle_behandlungen">Current treatments</string>
    <string name="aktuelle_mediaktion">Current medication</string>
    <string name="aktuelle_vergangene_symptomen">Current past symptoms</string>
    <string name="herztoene">Heart Beat</string>
    <string name="send_to_server">Send to server</string>
    <string name="edit_info">Edit information</string>


</resources>